# routes/userRoutes.js
@@ -14,7 +14,7 @@ const {
   verifyEmailOtp,
 } = require("../controller/authController");
 
-router.route("/signup").post(createUser);
+router.route("").post(createUser);
 router.route("/verify/mobile").post(verifyMobile);
 router.route("/verify/mobile/otp").post(verifyOtp);
 router.route("/verify/email").post(verifyEmail);
@@ -22,5 +22,5 @@ router.route("/verify/email/otp").post(verifyEmailOtp);
 router.route("/login").post(userLogin);
 router.route("/login/token").post(loginViaToken);
 router.route("/logout").post(verifyLogIntoken, logout);
-router.route("/getUser").get(verifyLogIntoken, getUserById);
+router.route("/").get(verifyLogIntoken, getUserById);
 module.exports = router;
